// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - areas.extra: - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - areas.extra: - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": <div
        data-testid="area-extra"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        extra
      </div>,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "areas.extra:",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": <div
        data-testid="area-extra"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        extra
      </div>,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "areas.extra:",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - default - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - default - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "default",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "default",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.closable: false - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.closable: false - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": false,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.closable: false",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": false,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.closable: false",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.contentWrapperStyle: border: 10px solid green - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.contentWrapperStyle: border: 10px solid green - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": Object {
        "border": "10px solid green",
      },
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.contentWrapperStyle: border: 10px solid green",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": Object {
        "border": "10px solid green",
      },
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.contentWrapperStyle: border: 10px solid green",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.height: 500 placement: top - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.height: 500 placement: top - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": 500,
      "id": "properties.height: 500 placement: top",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": "top",
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": 500,
      "id": "properties.height: 500 placement: top",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": "top",
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.keyboard: false - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.keyboard: false - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.keyboard: false",
      "keyboard": false,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.keyboard: false",
      "keyboard": false,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.mask - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.mask - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.mask",
      "keyboard": undefined,
      "mask": false,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.mask",
      "keyboard": undefined,
      "mask": false,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.maskClosable: false - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.maskClosable: false - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.maskClosable: false",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": false,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.maskClosable: false",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": false,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.placement: bottom - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.placement: bottom - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.placement: bottom",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": "bottom",
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.placement: bottom",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": "bottom",
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.placement: left - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.placement: left - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.placement: left",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": "left",
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.placement: left",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": "left",
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.placement: top - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.placement: top - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.placement: top",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": "top",
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.placement: top",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": "top",
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.title - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.title - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.title",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": "Drawer title",
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.title",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": "Drawer title",
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.width: 500 - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.width: 500 - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.width: 500",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": 500,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.width: 500",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": 500,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.zIndex: 1100 - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"setOpen","args":{"open":true}} - properties.zIndex: 1100 - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.zIndex: 1100",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": 1100,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.zIndex: 1100",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": 1100,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - areas.extra: - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - areas.extra: - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": <div
        data-testid="area-extra"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        extra
      </div>,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "areas.extra:",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": <div
        data-testid="area-extra"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        extra
      </div>,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "areas.extra:",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - default - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - default - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "default",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "default",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.closable: false - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.closable: false - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": false,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.closable: false",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": false,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.closable: false",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.contentWrapperStyle: border: 10px solid green - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.contentWrapperStyle: border: 10px solid green - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": Object {
        "border": "10px solid green",
      },
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.contentWrapperStyle: border: 10px solid green",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": Object {
        "border": "10px solid green",
      },
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.contentWrapperStyle: border: 10px solid green",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.height: 500 placement: top - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.height: 500 placement: top - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": 500,
      "id": "properties.height: 500 placement: top",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": "top",
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": 500,
      "id": "properties.height: 500 placement: top",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": "top",
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.keyboard: false - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.keyboard: false - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.keyboard: false",
      "keyboard": false,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.keyboard: false",
      "keyboard": false,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.mask - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.mask - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.mask",
      "keyboard": undefined,
      "mask": false,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.mask",
      "keyboard": undefined,
      "mask": false,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.maskClosable: false - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.maskClosable: false - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.maskClosable: false",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": false,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.maskClosable: false",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": false,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.placement: bottom - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.placement: bottom - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.placement: bottom",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": "bottom",
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.placement: bottom",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": "bottom",
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.placement: left - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.placement: left - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.placement: left",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": "left",
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.placement: left",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": "left",
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.placement: top - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.placement: top - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.placement: top",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": "top",
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.placement: top",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": "top",
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.title - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.title - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.title",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": "Drawer title",
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.title",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": "Drawer title",
      "visible": true,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.width: 500 - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.width: 500 - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.width: 500",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": 500,
      "zIndex": undefined,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.width: 500",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": 500,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.zIndex: 1100 - value[0] - Drawer 1`] = `mocked`;

exports[`Mock for method: {"name":"toggleOpen","args":{}} - properties.zIndex: 1100 - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.zIndex: 1100",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": 1100,
    },
    Object {},
  ],
  Array [
    Object {
      "bodyStyle": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": undefined,
      "drawerStyle": undefined,
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": undefined,
      "height": undefined,
      "id": "properties.zIndex: 1100",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": undefined,
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": true,
      "width": undefined,
      "zIndex": 1100,
    },
    Object {},
  ],
]
`;

exports[`Test Schema areas.extra: 1`] = `true`;

exports[`Test Schema areas.extra: 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.closable: false 1`] = `true`;

exports[`Test Schema properties.closable: false 2`] = `null`;

exports[`Test Schema properties.contentWrapperStyle: border: 10px solid green 1`] = `true`;

exports[`Test Schema properties.contentWrapperStyle: border: 10px solid green 2`] = `null`;

exports[`Test Schema properties.height: 500 placement: top 1`] = `true`;

exports[`Test Schema properties.height: 500 placement: top 2`] = `null`;

exports[`Test Schema properties.keyboard: false 1`] = `true`;

exports[`Test Schema properties.keyboard: false 2`] = `null`;

exports[`Test Schema properties.mask 1`] = `true`;

exports[`Test Schema properties.mask 2`] = `null`;

exports[`Test Schema properties.maskClosable: false 1`] = `true`;

exports[`Test Schema properties.maskClosable: false 2`] = `null`;

exports[`Test Schema properties.placement: bottom 1`] = `true`;

exports[`Test Schema properties.placement: bottom 2`] = `null`;

exports[`Test Schema properties.placement: left 1`] = `true`;

exports[`Test Schema properties.placement: left 2`] = `null`;

exports[`Test Schema properties.placement: top 1`] = `true`;

exports[`Test Schema properties.placement: top 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;

exports[`Test Schema properties.width: 500 1`] = `true`;

exports[`Test Schema properties.width: 500 2`] = `null`;

exports[`Test Schema properties.zIndex: 1100 1`] = `true`;

exports[`Test Schema properties.zIndex: 1100 2`] = `null`;
